--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "gatsby-starter-tailwind",
-  "description": "Gatsby starter styled with Tailwind",
-  "version": "4.0.0",
-  "author": "Taylor Bryant <taylor@bryant.io>",
+  "name": "covid-dashboard",
+  "description": "Cuadro de mandos covid Jaén",
+  "version": "1.0.0",
+  "author": "algm",
   "dependencies": {
+    "@nivo/line": "^0.61.1",
     "axios": "^0.19.2",
+    "axios-hooks": "^1.10.0",
+    "date-fns": "^2.12.0",
+    "fetch-retry": "^3.1.0",
     "gatsby": "2.20.31",
     "gatsby-plugin-manifest": "2.3.7",
     "gatsby-plugin-offline": "3.1.5",
@@ -12,10 +16,15 @@
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "3.2.5",
     "gatsby-plugin-sharp": "2.5.7",
+    "gatsby-source-custom-api": "^2.1.4",
+    "lodash.pickby": "^4.6.0",
+    "lodash.startswith": "^4.2.1",
+    "node-fetch": "^2.6.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "6.0.0"
+    "react-helmet": "6.0.0",
+    "react-icons": "^3.10.0"
   },
   "keywords": [
     "gatsby",
@@ -50,7 +59,7 @@
     "eslint-plugin-react": "7.19.0",
     "gatsby-plugin-eslint": "2.0.8",
     "prettier": "2.0.5",
-    "tailwindcss": "1.3.5"
+    "tailwindcss": "^1.3"
   },
   "repository": {
     "type": "git",
