--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios-hooks": "^1.10.0",
     "date-fns": "^2.12.0",
     "fetch-retry": "^3.1.0",
-    "gatsby": "2.20.31",
+    "gatsby": "2.23.5",
     "gatsby-plugin-manifest": "2.3.7",
     "gatsby-plugin-offline": "3.1.5",
     "gatsby-plugin-postcss": "2.2.4",
@@ -24,7 +24,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.0.0",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "xstate": "4.10.0"
   },
   "keywords": [
     "gatsby",
@@ -67,5 +68,8 @@
   },
   "bugs": {
     "url": "https://github.com/taylorbryant/gatsby-starter-tailwind/issues"
+  },
+  "resolutions": {
+    "babel-plugin-remove-graphql-queries": "2.9.9"
   }
 }
