--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios-hooks": "^1.10.0",
     "date-fns": "^2.12.0",
     "fetch-retry": "^3.1.0",
-    "gatsby": "2.23.5",
+    "gatsby": "^2.23.18",
     "gatsby-plugin-manifest": "2.3.7",
     "gatsby-plugin-offline": "3.1.5",
     "gatsby-plugin-postcss": "2.2.4",
@@ -68,8 +68,5 @@
   },
   "bugs": {
     "url": "https://github.com/taylorbryant/gatsby-starter-tailwind/issues"
-  },
-  "resolutions": {
-    "babel-plugin-remove-graphql-queries": "2.9.9"
   }
 }
