--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "algm",
   "dependencies": {
     "@nivo/line": "^0.61.1",
+    "animated-number-react": "^0.1.1",
     "axios": "^0.19.2",
     "axios-hooks": "^1.10.0",
     "date-fns": "^2.12.0",
